--- a/src/views/customers.ejs
+++ b/src/views/customers.ejs
@@ -2,7 +2,7 @@
 
 <div class="container">
     <div class="row mt-5">
-        <div class="col-md-7">
+        <div class="col-md-7 col-xs-12">
             <table class="table table-bordered table-hover">
                 <thead>
                      <tr>
@@ -31,7 +31,7 @@
                 </tbody>
             </table>
         </div>
-        <div class="col-md-5">
+        <div class="col-md-5 col-xs-12">
             <div class="card">
                 <div class="card-body">
                     <form action="/add" method="POST">
